--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "next": "15.0.2",
     "next-seo": "^6.6.0",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-apexcharts": "^1.7.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-fast-marquee": "^1.6.5",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
+    "react-tradingview-widget": "^1.3.2",
+    "react-ts-tradingview-widgets": "^1.2.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
