--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mui/material": "^6.3.1",
     "@mui/styles": "^6.1.5",
     "@mui/system": "^6.3.1",
-    "@mysten/sui": "^1.18.0",
+    "@mysten/dapp-kit": "^0.14.47",
+    "@mysten/sui": "^1.20.0",
+    "@mysten/sui.js": "^0.54.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@suiet/wallet-kit": "^0.3.3",
+    "@tanstack/react-query": "^5.64.2",
     "animate.css": "^4.1.1",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.7",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
     "next": "15.0.2",
     "next-seo": "^6.6.0",
