--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@suiet/wallet-kit": "^0.3.3",
     "@tanstack/react-query": "^5.64.2",
     "animate.css": "^4.1.1",
-    "apexcharts": "^4.3.0",
+    "apexcharts": "^4.4.0",
+    "lightweight-charts": "^4.2.2",
     "axios": "^1.7.7",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
